// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`string.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
interface I {
    "string": "I";
}

type T = {
    "string": "T";
}

interface A {
    'string': "A";
}

type B = {
    'string': "B";
}

=====================================output=====================================
interface I {
  string: "I";
}

type T = {
  string: "T";
};

interface A {
  string: "A";
}

type B = {
  string: "B";
};

================================================================================
`;

exports[`symbol.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
interface I {
    [Symbol.toStringTag]: "I";
}

type T = {
    [Symbol.toStringTag]: "T";
}

=====================================output=====================================
interface I {
  [Symbol.toStringTag]: "I";
}

type T = {
  [Symbol.toStringTag]: "T";
};

================================================================================
`;
